if(BUILD_ENKF_GFS)
  add_subdirectory(gfs)
endif()

if(BUILD_ENKF_ARW)
  if(NOT TARGET gsi)
    if(NOT gsi_FOUND)
      message(FATAL_ERROR "Utils: GSI library was not found for EnKF ARW utilities")
    endif()
  endif()
  if(NOT GSI_MODE MATCHES "Regional")
    message(FATAL_ERROR "Utils: Incompatible GSI = ${GSI_MODE} for EnKF ARW utilities")
  endif()
  add_subdirectory(arw)
endif()
